Fix monospace font crash (#933)
Fix resurgence of `DWriteFont::Create Fatal Error: EXCEPTION_ACCESS_VIOLATION_READ` errors.

This issue is actually pretty easy to reproduce, you just have to be running Windows with a hidpi / retina screen, and show the Plot panel (which uses offscreen canvas / web workers). I can even reproduce it using RDP connected to Windows from a retina Macbook Pro. It seems to be an electron (or lower) bug that we need to work around. I can't understand what is causing it - removing some of the final fallback fonts from our monospace stack seems to fix it some times (but not 100% of the time), but my windows box has `Cascadia Mono` installed, so it shouldn't even be looking at the fallback fonts.

In any case, as a workaround I am restoring our use of `Roboto Mono` everywhere (including explicitly loading it into web workers) that was removed in https://github.com/foxglove/studio/pull/888.

A better approach in the future might be to explicitly bundle [Cascadia Mono](https://github.com/microsoft/cascadia-code) on Windows, and use system monospace fonts everywhere else. But I've spent enough time on this for now and would prefer to just ship a fix.

--- a/app/styles/fonts.module.scss
+++ b/app/styles/fonts.module.scss
@@ -24,18 +24,9 @@
   // Use fixed width numbers (important for numbers that update during playback)
   font-feature-settings: "tnum";
 }
+
+// We currently avoid monospace system fonts due to DWriteFont::Create electron crash
+// when rendering offscreen canvas (see comments in ChartJsMux.ts and https://github.com/foxglove/studio/pull/933).
 @mixin ff-monospace {
-  font-family:
-    // Apple
-    ui-monospace,
-    // Windows
-    "Cascadia Mono",
-    "Segoe UI Mono",
-    // Ubuntu
-    "Ubuntu Mono",
-    // Chrome OS and Android
-    "Roboto Mono",
-    // Fallback
-    "Menlo",
-    "Monaco", "Consolas", monospace;
+  font-family: "Roboto Mono";
 }
